--- a/allip_digits_2f_authentication/static/description/index.html
+++ b/allip_digits_2f_authentication/static/description/index.html
@@ -1,9 +1,9 @@
 <section class="oe_container oe_dark" style="background: #68465f;">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-          <h1 class="oe_slogan" style="color: #ffffff;">
-            <small><strike>Only $0.10 per user &amp; $0.05 per authentication</strike></small>
-          </h1>
+          <h3 class="oe_slogan" style="color: #cccccc;">
+            <strike>Only $0.10 per user &amp; $0.05 per authentication</strike>
+          </h3>
           <h1 class="oe_slogan" style="color: #ffffff;">
             <strong>Free</strong> for Odoo Users
           </h1>
