--- a/allip_digits_2f_authentication/static/description/index.html
+++ b/allip_digits_2f_authentication/static/description/index.html
@@ -1,9 +1,9 @@
 <section class="oe_container oe_dark" style="background: #68465f;">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-          <h1 class="oe_slogan" style="color: #ffffff;">
-            <small><strike>Only $0.10 per user &amp; $0.05 per authentication</strike></small>
-          </h1>
+          <h3 class="oe_slogan" style="color: #cccccc;">
+            <strike>Only $0.10 per user &amp; $0.05 per authentication</strike>
+          </h3>
           <h1 class="oe_slogan" style="color: #ffffff;">
             <strong>Free</strong> for Odoo Users
           </h1>
@@ -41,7 +41,7 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan">Enterprise-class Service</h2>
-        <h1 class="oe_slogan"><strong>$0</strong>/month</h1>
+        <h1 class="oe_slogan"><strong>$0/month</strong></h1>
         <div class="oe_span6">
             <p class="oe_mt32">
             <span class="pull-left">Per User Authenticated</span><span class="pull-right"><strike style="visibility: visible; animation-delay: 0.25s; animation-name: strike;">$ 0.10</strike> <em class="wow fadeIn animated" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: fadeIn;">$ 0.00</em></span>
