--- a/allip_digits_2f_authentication/static/description/index.html
+++ b/allip_digits_2f_authentication/static/description/index.html
@@ -128,12 +128,12 @@ At an 85% conversion rate, features like two-factor authentication and voice ver
 <section class="oe_container lead">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-            <h2 class="oe_slogan"><a href="mailto:help@allipcloud.com?subject=(allip_digits_2f_authentication)%20Support" style="color: #000000 !important;"> Get Help &amp; Support</a></h2>
+            <h2 class="oe_slogan"><a href="https://www.allipcloud.com/page/contactus" style="color: #000000 !important;"> Get Help &amp; Support</a></h2>
         </div>
         <br>
         <div class="oe_slogan oe_spaced text-center"> 
-    <a class="btn btn-success mt8" title="Get Help !" style="background-color: #68465f; color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="mailto:help@allipcloud.com?subject=(allip_digits_2f_authentication)%20Support"> Help </a>
-     <a class="btn btn-success mt8" title="Get Support!" style="background-color: #68465f; color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="mailto:help@allipcloud.com?subject=(allip_digits_2f_authentication)%20Support"> Support </a> 
+    <a class="btn btn-success mt8" title="Get Help !" style="background-color: #68465f; color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="https://www.allipcloud.com/page/contactus"> Help </a>
+     <a class="btn btn-success mt8" title="Get Support!" style="background-color: #68465f; color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="https://www.allipcloud.com/page/contactus"> Support </a> 
     <a class="btn btn-success mt8" title="Request New Features now !" style="background-color: #68465f; color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="https://www.allipcloud.com/page/contactus"> Request New Features </a>
         </div>
     </div>
