--- a/sabro_communications/static/description/index.html
+++ b/sabro_communications/static/description/index.html
@@ -1,47 +1,192 @@
-
-<section class="oe_container">
-    <div class="oe_row">
-        <div class="oe_span12">
-			<h2>
-				<strong>Product Description</strong>
-			</h2>
-			<p>A simple, easy to use tool to enable communications to your business. SaBRO Communications integrate Odoo contacts and users to SaBRO platform in order to enable calling features on odoo platform. SaBRO Communications provides all necessary standard and advanced features to enable telephony to your business.
-			</p>         
+<section class="oe_container oe_dark" style="background: #182c50;">
+    <div class="oe_spaced">
+        <div class="row">
+          <h3 class="oe_slogan" style="color: #ffffff;opacity: 1;">
+            Business Workflow Integrated Communications Platform</h3>
+          <h3 class="oe_slogan" style="color: #ffffff;font-size: 18px;opacity: 1;">Transform Odoo into Business Phone System</h3>
         </div>
     </div>
 </section>
 <section class="oe_container">
-    <div class="oe_row">
+    <div class="oe_spaced">
+        <div class="">
+          <h3 class="oe_slogan" style="font-size: 30px;opacity: 1;">Product Description</h3>
+          <p class="oe_slogan">
+           A simple, easy to use tool to enable communications to your business. SaBRO Communications integrate Odoo contacts and users to SaBRO platform in order to enable calling features on odoo platform. SaBRO Communications provides all necessary standard and advanced features to enable telephony to your business.</p>
+        </div>
+    </div>
+</section>
+ <section class="s_three_columns_circle" style="background-color: #9e9e9e0a; padding: 50px 3% 0px;">
         <div>
-          <h4>Features</h4>
-		  <h4>Standard</h4>
-          <ol>
-			<li>Incoming Calls
-			<li>Outgoing Calls</li>
-			<li>Call Forwarding/Transfer</li>
-			<li>Music on Hold</li>
-			<li>Voicemails</li>
-			<li>Call History</li>
-          </ol>
-		  <h4>Advanced</h4>
-		  <ol>  
-			<li>Business Numbers</li>
-			<li>Number Mapping</li>
-			<li>Caller ID Management</li>
-			<li>Call Routing</li>
-			<li>IVR</li>
-			<li>Greeting Message</li>
-			<li>Business hours Call handling</li>
-			<li>Call Recording</li>
-			<li>Direct SMS</li>
-			<li>Custom SMS sender Name</li>
-			<li>Department SMS</li>
-			<li>Direct FAX</li>
-			<li>Department FAX</li>
-			<li>Department Ring Group</li>
-			<li>Deskphone Provisioning</li>
-			<li>Softphone Provisioning</li>
-          </ol>		  
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <h1 style="color: rgb(42, 96, 178);">
+                Standard Features
+              </h1>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1300" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Incoming Calls</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Get your business calls on your odoo without external tools and setup overhead.</p>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1301" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Outgoing Calls</font>         
+                <br/>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Make local,  national and international calls using webRTC from Odoo.</p>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1302" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Voicemail</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Attend to your missed calls and customer queries even if you are unavailable.</p>
+            </div>
+          </div>
         </div>
-    </div>
-</section>
+      </section>
+      <section class="s_three_columns_circle bg-white" style="background-color: #9e9e9e0a;padding: 0px 3% 50px;">
+        <div>
+          <div class="row">
+          <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1303" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;" aria-describedby="tooltip852618"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Music On Hold</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center; color: rgb(140, 140, 140);">Keep your callers&#39; entertained while forwarding or transferring their call to external number or agents.</p>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1304" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Call forwarding</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Forward business calls instantly to reduce the waiting time of your callers.</p>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1312" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Call History</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center; color: rgb(140, 140, 140);">Track and monitor all your business calls to ensure you do not miss any potential leads.</p>
+            </div>           
+          </div>
+        </div>
+     </section>
+     <section class="s_three_columns_circle" style="padding: 50px 3% 0px;">
+        <div>
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <h1 style="color: rgb(42, 96, 178);">
+                Advance Features
+              </h1>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1309" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Business Numbers</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Add multiple phone numbers from more than 80+ countries and extensions to receive calls from anywhere, anytime.</p>
+            </div> 
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1310" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Number Routing</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Map your business numbers to the user extension, department ring group or call flow to connect your customer.</p>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1316" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Default Call Flow</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Take benefit of default call routing and divert a plan to assure each call gets attended even in case of disruption.</p>
+            </div>                       
+          </div>
+        </div>
+      </section>
+       <section class="s_three_columns_circle bg-white" style="padding: 0px 3% 0px;">
+        <div>
+          <div class="row">
+          <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1313" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Business Hours Call Handling</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Create a custom call flow to efficaciously route or divert calls during office hours for different timezone and different working days.</p>
+            </div>
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1314" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Closed Hours Call Handling</font>
+                <br/>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Create a custom call flow and handle the calls gracefully coming in during out-of-office hours or holidays.<br/></p>
+            </div>
+          	<div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1315" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Effective call Routing with Ext &amp; IVR</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140);">You can create a custom extension and / or an IVR menu to effectively route and handle the incoming calls.</p>
+            </div>                    
+          </div>
+        </div>
+      </section>    
+      <section class="s_three_columns_circle bg-white" style="padding: 0px 3% 0px;">
+        <div>
+          <div class="row">
+         	 <div class="col-md-4 mb16 mt32 padding-l-r-32">
+              <img src="https://www.allipcloud.com/web/image/1306" class="center-block img-responsive" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Custom Greeting Message</font>
+              </h3>
+              <p class="mt16 text-justify" style="text-align: center; color: rgb(140, 140, 140);">Personalize the call experience by greeting your customers with a welcome message.</p>
+            </div>   
+            <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1305" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;" aria-describedby="tooltip852618"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Real Time Call Recording</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center; color: rgb(140, 140, 140);">Listen and analyse your customer conversation to understand the requirements of your callers.</p>
+            </div>
+            <div class="col-md-4 mb16 mt32 padding-l-r-32">
+              <img src="https://www.allipcloud.com/web/image/1303" class="center-block img-circle img-responsive" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font>Live call transfer</font>
+              </h3>
+              <p class="mt16 text-justify" style="text-align: center; color: rgb(140, 140, 140);">Transfer calls without disconnecting ongoing calls to enhance your callers’ call experience.</p>
+            </div>                             
+          </div>
+        </div>
+      </section>
+      <section class="s_three_columns_circle bg-white" style="padding: 0px 3% 50px;">
+        <div>
+          <div class="row">
+             <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1307" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font class="text-gray-darker">Direct &amp; Group SMS</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Send and receive SMS on user&#39;s account and assigned to the department to manage the incoming SMS effectively.</p>
+            </div>
+             <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1311" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font class="text-gray-darker">Direct &amp; Group FAX</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Send and receive business Fax from SaBRO. Assign the Fax to the user or department to respond to the sender efficiently.</p>
+            </div>
+             <div class="mt32 mb16 padding-l-r-32 col-md-4">
+              <img src="https://www.allipcloud.com/web/image/1308" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <h3 class="mt32 text-center" style="color: #7d7878;">
+                <font class="text-gray-darker">Live Dashboard</font>
+              </h3>
+              <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Monitor the number of calls connected and missed by each department in your organization.</p>
+            </div>                                   
+          </div>
+        </div>
+      </section>
