Updated Description. Added missing country phone codes in res.country table

--- a/sabro_communications/static/description/index.html
+++ b/sabro_communications/static/description/index.html
@@ -190,3 +190,16 @@
           </div>
         </div>
       </section>
+      <section class="s_three_columns_circle bg-white" style="padding: 50px 3% 50px;">
+		<div class="container">
+		  <div class="row">            
+			 <div class="mt32 mb32 padding-l-r-32" style="text-align: center;">
+				  <h1 class="text-center" style="color: #7d7878;">
+					<font class="text-gray-darker">Need Any Help?</font>
+				  </h1>
+				  <p class="text-justify mt16 mb16" style="color: rgb(140, 140, 140);text-align: center;">Write us at: <span style="Color:#007bff;">sfo.support@allipcloud.com</span></p>
+			      <a href="https://www.allipcloud.com/page/contactus" class="btn btn-primary mt16 mb16">Contact Us</a>			   
+			 </div>                                           
+		  </div>
+		</div>
+	</section>
