--- a/sabro_communications/static/description/index.html
+++ b/sabro_communications/static/description/index.html
@@ -25,14 +25,14 @@
               </h1>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1300" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/IncomingCalls.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Incoming Calls</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Get your business calls on your odoo without external tools and setup overhead.</p>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1301" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/OutgoingCalls.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Outgoing Calls</font>         
                 <br/>
@@ -40,7 +40,7 @@
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Make local,  national and international calls using webRTC from Odoo.</p>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1302" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/Voicemail.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Voicemail</font>
               </h3>
@@ -53,21 +53,21 @@
         <div>
           <div class="row">
           <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1303" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;" aria-describedby="tooltip852618"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/MusicOnHold.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;" aria-describedby="tooltip852618"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Music On Hold</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center; color: rgb(140, 140, 140);">Keep your callers&#39; entertained while forwarding or transferring their call to external number or agents.</p>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1304" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/CallForwarding.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Call forwarding</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Forward business calls instantly to reduce the waiting time of your callers.</p>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1312" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/CallHistory.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Call History</font>
               </h3>
@@ -85,21 +85,21 @@
               </h1>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1309" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/BusinessNumbers.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Business Numbers</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Add multiple phone numbers from more than 80+ countries and extensions to receive calls from anywhere, anytime.</p>
             </div> 
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1310" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/NumberRouting.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Number Routing</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Map your business numbers to the user extension, department ring group or call flow to connect your customer.</p>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1316" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/DefaultCallFlow.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Default Call Flow</font>
               </h3>
@@ -112,14 +112,14 @@
         <div>
           <div class="row">
           <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1313" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/BusinessHours.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Business Hours Call Handling</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Create a custom call flow to efficaciously route or divert calls during office hours for different timezone and different working days.</p>
             </div>
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1314" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/ClosedHours.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Closed Hours Call Handling</font>
                 <br/>
@@ -127,7 +127,7 @@
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Create a custom call flow and handle the calls gracefully coming in during out-of-office hours or holidays.<br/></p>
             </div>
           	<div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1315" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/EffectiveCallRouting.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Effective call Routing with Ext &amp; IVR</font>
               </h3>
@@ -140,21 +140,21 @@
         <div>
           <div class="row">
          	 <div class="col-md-4 mb16 mt32 padding-l-r-32">
-              <img src="https://www.allipcloud.com/web/image/1306" class="center-block img-responsive" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/CustomGreeting.png" class="center-block img-responsive" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Custom Greeting Message</font>
               </h3>
               <p class="mt16 text-justify" style="text-align: center; color: rgb(140, 140, 140);">Personalize the call experience by greeting your customers with a welcome message.</p>
             </div>   
             <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1305" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;" aria-describedby="tooltip852618"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/Real-TimeCall.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;" aria-describedby="tooltip852618"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Real Time Call Recording</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center; color: rgb(140, 140, 140);">Listen and analyse your customer conversation to understand the requirements of your callers.</p>
             </div>
             <div class="col-md-4 mb16 mt32 padding-l-r-32">
-              <img src="https://www.allipcloud.com/web/image/1303" class="center-block img-circle img-responsive" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/LiveCallTransfer.png" class="center-block img-responsive" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font>Live call transfer</font>
               </h3>
@@ -167,21 +167,21 @@
         <div>
           <div class="row">
              <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1307" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/GroupSMS.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font class="text-gray-darker">Direct &amp; Group SMS</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Send and receive SMS on user&#39;s account and assigned to the department to manage the incoming SMS effectively.</p>
             </div>
              <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1311" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/GroupFAX.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font class="text-gray-darker">Direct &amp; Group FAX</font>
               </h3>
               <p class="text-justify mt16" style="text-align: center;color: rgb(140, 140, 140); ">Send and receive business Fax from SaBRO. Assign the Fax to the user or department to respond to the sender efficiently.</p>
             </div>
              <div class="mt32 mb16 padding-l-r-32 col-md-4">
-              <img src="https://www.allipcloud.com/web/image/1308" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
+              <img src="https://allip-website-resource.s3.eu-west-1.amazonaws.com/sfo/LiveDashboard.png" class="img-responsive center-block" data-original-title="" title="" style="width: 25%;"/>
               <h3 class="mt32 text-center" style="color: #7d7878;">
                 <font class="text-gray-darker">Live Dashboard</font>
               </h3>
