--- a/sabro_communications/static/description/index.html
+++ b/sabro_communications/static/description/index.html
@@ -1,6 +1,6 @@
 <section class="oe_container oe_dark" style="background: #182c50;">
     <div class="oe_spaced">
-        <div class="row">
+        <div class="">
           <h3 class="oe_slogan" style="color: #ffffff;opacity: 1;">
             Business Workflow Integrated Communications Platform</h3>
           <h3 class="oe_slogan" style="color: #ffffff;font-size: 18px;opacity: 1;">Transform Odoo into Business Phone System</h3>
